editors/tree-sitter-emojicode/grammar.js
    source_file: $ => repeat($._document_statement),

    _document_statement: $ => choice(
      $.package_import,
      $.include,
      $.start_flag,
      $.link_hints,
      $._type_definition,
    ),

    start_flag: $ => seq('🏁', optional($.return_type), field('body', $.block)),
    documentation_comment: _ => token(choice(/📗[^📗]*📗/, /📘[^📘]*📘/)),

    // Type definitions

    _type_attribute: $ => choice('🌍', '🔏', $.decorator, seq('📻', optional($.string))),

    class_definition: $ => seq(
      repeat($._type_attribute), '🐇', field('name', $.type_identifier),
      optional($.generic_parameters), optional(field('superclass', $._type_not_callable)),
      field('body', $.type_body),
    ),
    value_type_definition: $ => seq(
      repeat($._type_attribute), '🕊', field('name', $.type_identifier),
      optional($.generic_parameters), field('body', $.type_body),
    ),
    enum_definition: $ => seq(repeat($._type_attribute), '🔘', field('name', $.type_identifier),
                              field('body', $.type_body)),
    protocol_definition: $ => seq(repeat($._type_attribute), '🐊', field('name', $.type_identifier),
                                  optional($.generic_parameters), field('body', $.type_body)),

    generic_parameters: $ => seq('🐚', repeat($.generic_parameter), '🍆'),
    generic_parameter: $ => seq(optional('☣'), field('name', $.variable), field('constraint', $._type)),

    type_body: $ => seq('🍇', repeat($._member), '🍉'),

    _member: $ => choice(
      $.instance_variable,
      $.method,
      $.initializer,
      $.deinitializer,
      $.protocol_conformance,
    ),

    _member_attribute: $ => choice('🥯', '⚠', '🔏', '✒', '🐇', '☣', '🖍', '🔑', $.decorator, $.access_level),

    instance_variable: $ => seq('🖍', optional($.access_level), '🆕', field('name', $.variable),
                                field('type', $._type), optional(seq('⬅', field('value', $._expression)))),

    protocol_conformance: $ => seq(optional($.access_level), '🐊', $._type),
    method: $ => prec.dynamic(0, seq(
      repeat($._member_attribute),
      choice(
        seq(field('mood', choice('❗', '❓', '➡')), field('name', $.identifier)),
        field('name', $.operator),
      ),
      optional($.generic_parameters),
      repeat($.parameter),
      optional($.return_type),
      optional($.error_type),
      optional(field('body', $._function_body)),
    )),

    // Enum values are initializers without parameters and body.
    initializer: $ => prec.right(seq(
      repeat($._member_attribute),
      '🆕',
      optional(seq('▶', field('name', $.identifier))),
      optional($.generic_parameters),
      repeat($.parameter),
      optional($.error_type),
      optional(field('body', $._function_body)),
    )),

    parameter: $ => seq(optional('🍼'), optional($.decorator), field('name', $.variable), field('type', $._type)),
    return_type: $ => seq('➡', $._type),
    _function_body: $ => choice($.block, $.external_body),
    external_body: $ => prec.right(seq('📻', $.string, optional($.block))),

    // Types

    _type: $ => choice($._type_not_callable, $.callable_type),
    _type_not_callable: $ => choice(
      $.type_value_type,
      $.no_return_type,
      $.something_type,
      $.optional_type,
      $.reference_type,
      $._type_main,
    ),
    type_value_type: $ => seq(choice('🐇', '🕊', '🔘', '🐊'), $._type),
    something_type: _ => seq(optional('✴'), '⚪'),
    type_identifier: $ => seq(optional(seq('🔶', field('namespace', $._type_name))), field('name', $._type_name)),
    // 🔂 is a keyword, but also a valid type name.
    _type_name: $ => choice($.identifier, alias('🔂', $.identifier)),
    generic_arguments: $ => seq('🐚', repeat($._type), '🍆'),

    _type_expression: $ => choice(
      seq('⬛', $._prefix_expression),
      '⚫',
      $.this,
      $._type,
    ),

    // Statements

    block: $ => seq('🍇', repeat($._statement), '🍉'),

    _statement: $ => choice(
      $.variable_declaration,
      $.if_statement,
      $.error_handler,
      $.repeat_while,
      $.for_in,
      $.unsafe_block,
      $.raise,
      $.return,
      $.operator_assignment,
      $.expression_statement,
    ),

    variable_declaration: $ => seq('🖍', '🆕', field('name', $.variable), field('type', $._type)),
    if_statement: $ => prec.right(seq(
      '↪', $._condition, optional($.branch_hint), field('consequence', $.block),
      repeat($.else_if), optional($.else),
    )),
    else_if: $ => seq(alias($._else_if, '🙅↪'), $._condition, optional($.branch_hint), field('consequence', $.block)),
    else: $ => seq(alias($._else, '🙅'), field('body', $.block)),
    // Like 🤷, 🙅 may be joined with other emoji, e.g. 🙅‍♂️.
    _else: _ => token(prec(1, seq('🙅', re('[\\u{1F3FB}-\\u{1F3FF}]?' + JOINED_OR_TRAILING)))),
    _else_if: _ => token(prec(1, seq('🙅', re('[\\u{1F3FB}-\\u{1F3FF}]?' + JOINED + '\\u{FE0F}?↪')))),
    _condition: $ => seq($._expression, optional(seq('➡', field('binding', $.variable)))),

    error_handler: $ => seq('🆗', optional(field('binding', $.variable)), $._expression, field('body', $.block),
                            alias($._else, '🙅'), field('error', $.variable), field('error_body', $.block)),
    repeat_while: $ => seq('🔁', $._condition, field('body', $.block)),
    for_in: $ => seq('🔂', field('element', $.variable), field('collection', $._expression), field('body', $.block)),
    raise: $ => seq('🚨', $._expression),
    return: $ => prec.right(seq('↩', optional(choice('↩', $._expression)))),
    operator_assignment: $ => seq(field('name', $.variable), '⬅', $.operator, $._expression),
    expression_statement: $ => prec.right(seq($._expression, optional(seq('➡', $._assignment_target)))),
    _assignment_target: $ => choice(
      seq('🖍', '🆕', field('declares', $.variable)),
      seq('🖍', field('assigns', $.variable)),
      field('declares', $.variable),
      alias($.assignment_call, $.method_call),
    ),
    _expression: $ => choice($.binary_expression, $._prefix_expression),

    binary_expression: $ => choice(...BINARY.map(([precedence, operators]) =>
      prec.left(PREC[precedence], seq(
        field('left', $._expression),
        field('operator', alias(operators.length === 1 ? operators[0] : choice(...operators), $.operator)),
        field('right', $._expression),
      )),
    )),

    _prefix_expression: $ => choice(
      $.unwrap,
      $.reraise,
      $.cast,
      $.callable_call,
      $._primary,
    ),
    unwrap: $ => prec(PREC.prefix, seq('🍺', $._prefix_expression)),
    cast: $ => prec(PREC.prefix, seq('🔲', $._prefix_expression, $._type_expression)),
    callable_call: $ => seq('⁉', $._prefix_expression, repeat($._expression), $._mood),

    primary_variable: $ => $.variable,
    closure: $ => seq(
      '🍇', repeat($.decorator), repeat($.parameter), optional($.return_type), optional($.error_type),
      repeat($._statement), '🍉',
    ),

    instantiation: $ => seq('🆕', field('type', $._type_expression),
                            optional(seq('▶', field('name', $.identifier))), optional($.generic_arguments),
                            repeat($._expression), $._mood),

    // The callee is the first argument.
    method_call: $ => prec(PREC.call, seq(field('name', $.identifier), optional($.generic_arguments),
                                          repeat($._expression), $._mood)),

    super_call: $ => seq('⤴', choice('🆕', field('name', $.identifier), $.operator), optional($.generic_arguments),
                         repeat($._expression), $._mood),

    _mood: $ => alias(choice('❗', '❓'), $.mood),

    collection_literal: $ => seq('🍿', repeat(choice($._expression, '➡')), '🍆'),

    // Tokens

    identifier: _ => IDENTIFIER,
    variable: _ => re('[^' + NOT_VARIABLE + '0-9+\\-][^' + NOT_VARIABLE + ']*'),
    decorator: _ => token(seq('🎍', re(EMOJI + '\\u{FE0F}?'))),
    operator: _ => choice('➕', '➖', '➗', '✖', '🚮', '👈', '👉', '⭕', '💢', '❌', '🙌', '😜', '🤝', '👐',
                          token(seq(/[◀▶]/, optional(seq(/\uFE0F*/, '🙌'))))),
    number: _ => token(choice(
      /0,*[xX][0-9a-fA-F,]*(\.[0-9]+)?/,
      /[0-9][0-9,]*(\.[0-9]+)?/,
      // A sign may be followed directly by the decimal point: -.5
      /[+\-],*([0-9][0-9,]*(\.[0-9]+)?|\.[0-9]+)/,
    )),
    boolean: _ => choice('👍', '👎'),
    no_value: _ => token(prec(1, seq('🤷', re('[\\u{1F3FB}-\\u{1F3FF}]?' + JOINED_OR_TRAILING)))),

    string: $ => seq(
      '🔤',
      repeat(choice($.string_content, $.escape_sequence, $.interpolation)),
      '🔤',
    ),
    string_content: _ => token.immediate(prec(1, /[^🔤🧲❌]+/)),
    escape_sequence: _ => token.immediate(/❌[\s\S]/),
    interpolation: $ => seq('🧲', $._expression, '🧲'),
  },
});
